--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
-/* todos */
-/* responsive */
-/* box-shadow 3d */
-/* spielfiguren */
+
 *{
     margin:0;
     padding:0;
@@ -11,7 +8,8 @@
 body{
     height: 100vh;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+    align-items: center;
     background: #000000;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -23,20 +21,32 @@ h1{
     text-align: center;
     color:pink;
     font-family: 'Odibee Sans', cursive;
-    font-size:5rem;
+    font-size:4.5rem;
     letter-spacing: 0.5rem;
     margin: 1rem 0rem;
     text-shadow: 0 1px 0 #dba1a1, 0 2px 0 #d89999, 0 3px 0 #d59292, 0 4px 0 #d28a8a, 0 5px 0 #cf8383, 0 6px 0 #cd7c7c, 0 7px 0 #ca7474, 0 8px 0 #c76d6d, 0 0 5px rgba(230, 139, 139, 0.05), 0 -1px 3px rgba(230, 139, 139, 0.2), 0 9px 9px rgba(230, 139, 139, 0.3), 0 12px 12px rgba(230, 139, 139, 0.3), 0 15px 15px rgba(230, 139, 139, 0.3);
 }
 
-
-
-table{
-    border:1px solid black;
+.wrapper{
+    background: #000000;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background:url(./img/wood.jpg);
     background-size: cover;
-    /* do box shadow 3d effekt!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-    box-shadow: 4px 6px 6px black;
+    width:45rem;
+    height:45rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* box-shadow: 4px 6px 6px 3px black; */
+    border-radius: 5px;
+    border:8px groove black;
+}
+
+table{
+    border:10px inset black;
+    border-radius: 5px;
+   
 }
 
 td{
@@ -51,25 +61,62 @@ table tr:nth-child(even) td:nth-child(odd) {
     background: #000;
   }
 
-@media(max-width:850px){
+.players{
+    text-align: center;
+    font-size: 2.8rem;
+}
+
+.white{
+    color:linen;
+}
+
+.grey{
+    color:rgb(56, 55, 55)
+}
+
+@media(max-width:900px){
     h1{
         font-size:4rem;
         margin: 2rem 0rem;
+    }
+    .wrapper{
+        width:36rem;
+        height:36rem;
+        border:6px groove black;
     }
     td{
         width:4rem;
         height:4rem;
     }
+    table{
+        border:8px inset black;
+    }
+    .players{
+        font-size: 2rem;
+    }
 }
 
 
-@media(max-width:550px){
+@media(max-width:590px){
     h1{
         font-size:3rem;
         margin: 2rem 0rem;
+    }
+    .wrapper{
+    width:21.6rem;
+    height:21.6rem;
+    border:3px groove black;
     }
     td{
         width:2.4rem;
         height:2.4rem;
     }
+    table{
+        border:4px inset black;
+    }
+    .players{
+        font-size: 1.5rem;
+    }
+
 }
+
