--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    /* box-shadow: 4px 6px 6px 3px black; */
+    box-shadow: 4px 6px 6px 3px rgb(22, 22, 22);
+    box-shadow: 4px 6px 6px 3px rgb(14, 13, 13);
     border-radius: 5px;
     border:8px groove black;
 }
