style:update styles

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
 }
+
 body{
     height: 100vh;
     display: flex;
@@ -13,19 +14,17 @@ body{
     background: #000000;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-
 }
 
 h1{
     text-align: center;
     color:pink;
-    font-family: 'Odibee Sans', cursive;
+    color: snow;
+    font-family: 'Poppins', sans-serif;
     font-size:4.5rem;
-    letter-spacing: 0.5rem;
-    margin: auto;
-    text-shadow: 0 1px 0 #dba1a1, 0 2px 0 #d89999, 0 3px 0 #d59292, 0 4px 0 #d28a8a, 0 5px 0 #cf8383, 0 6px 0 #cd7c7c, 0 7px 0 #ca7474, 0 8px 0 #c76d6d, 0 0 5px rgba(230, 139, 139, 0.05), 0 -1px 3px rgba(230, 139, 139, 0.2), 0 9px 9px rgba(230, 139, 139, 0.3), 0 12px 12px rgba(230, 139, 139, 0.3), 0 15px 15px rgba(230, 139, 139, 0.3);
-}
+    letter-spacing: 0.3rem;
+    margin:2rem 0rem;
+} 
 
 .wrapper{
     background: #000000;  /* fallback for old browsers */
@@ -75,6 +74,8 @@ table tr:nth-child(even) td:nth-child(odd) {
     color:rgb(56, 55, 55)
 }
 
+/* media queries */
+
 @media(max-width:1600px){
     h1{
         font-size:3.5rem;
@@ -96,10 +97,6 @@ table tr:nth-child(even) td:nth-child(odd) {
     }
 }
 
-
-
-
-
 @media(max-width:1400px){
     h1{
         font-size:3.5rem;
@@ -120,7 +117,6 @@ table tr:nth-child(even) td:nth-child(odd) {
         font-size: 2.3rem;
     }
 }
-
 
 @media(max-width:590px){
     h1{
